test/spec_vectors/global/ok/module_3.wat
(module (global (mut f32) (f32.const 0)) (export "a" (global 0)))