test/spec_vectors/global/fail/module_41.wat
(module (global $x (mut i32) (i32.const 0)) (func $type-global.set-value-empty-in-else (i32.const 0) (i32.const 0) (if (result i32) (then (i32.const 0)) (else (global.set $x)))))